# Aero_CFD

./: .gitignore  CFD.ipynb  README.md  pyproject.toml  r_1.md  r_2.md  requirements.txt  results.md
configs/: default.yaml
configs/data/: airfrans.yaml  toy_airfoil.yaml
configs/eval/: default.yaml
configs/experiments/: airfrans_geofno_heavy.yaml  airfrans_geofno_scalar_benchmark.yaml  airfrans_geofno_scalar_heavy.yaml  airfrans_original_heavy.yaml  airfrans_original_heavy_benchmark.yaml
configs/model/: deeponet.yaml
configs/serve/: default.yaml
configs/train/: default.yaml
examples/: airfrans_report_briefing.md  analysis_outputs.md  analysis_outputs_airfrans.md  demo_inference_generic_surface.json  generic_file_dataset_example.md  inference_input.json  quickstart.ipynb  sample_config.yaml
scripts/: benchmark.py  build_airfrans_benchmark_split.py  download_airfrans_official.py  evaluate.py  infer.py  prepare_dataset.py  run_demo.py  run_demo_inference.sh  serve.py  train.py
src/cfd_operator/: __init__.py  hard_regions.py  output_semantics.py  schema.py
src/cfd_operator/api/: app.py  schemas.py
src/cfd_operator/config/: __init__.py  loader.py  schemas.py
tests/: test_adapters.py  test_airfrans.py  test_analysis_infer_smoke.py  test_branch_inputs.py  test_capabilities.py  test_data.py  test_eval_smoke.py  test_feature_outputs.py  test_geometry.py  test_heads.py  test_losses.py  test_models.py  test_physics.py  test_postprocess.py  test_scalar_outputs.py  test_schema.py  test_slice_outputs.py  test_surface_outputs.py  test_train_smoke.py
(+60 files in other folders)
